[project]
name = "robot-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "robotframework>=7.3",
    "robotframework-browser>=19.5.1",
    "robotframework-debuglibrary>=2.5.0",
    "robotframework-tidy>=4.17.0",
]

[tool.robotidy]
diff = false
overwrite = true
verbose = false
separator = "space"
spacecount = 2
line_length = 120
lineseparator = "native"
skip_gitignore = true
ignore_git_dir = true
configure = [
    "AddMissingEnd:enabled=True",
    "NormalizeSeparators:enabled=True",
    "DiscardEmptySections:enabled=True",
    "MergeAndOrderSections:enabled=True",
    "RemoveEmptySettings:enabled=True",
    "ReplaceEmptyValues:enabled=True",
    "NormalizeAssignments:enabled=True",
    "NormalizeAssignments:equal_sign_type=space_and_equal_sign",
    "GenerateDocumentation:enabled=False",
    "OrderSettings:enabled=True",
    "OrderSettingsSection:enabled=True",
    "NormalizeTags:enabled=True",
    "OrderTags:enabled=False",
    "RenameVariables:enabled=True",
    "IndentNestedKeywords:enabled=False",
    "AlignSettingsSection:enabled=True",
    "AlignVariablesSection:enabled=True",
    "AlignTemplatedTestCases:enabled=True",
    "AlignTestCasesSection:enabled=False",
    "AlignKeywordsSection:enabled=False",
    "AlignKeywordsSection:widths=10",
    "NormalizeNewLines:enabled=True",
    "NormalizeNewLines:consecutive_lines=0",
    "NormalizeSectionHeaderName:enabled=True",
    "NormalizeSettingName:enabled=True",
    "ReplaceRunKeywordIf:enabled=True",
    "SplitTooLongLine:enabled=True",
    "SmartSortKeywords:enabled=False",
    "RenameTestCases:enabled=True",
    "RenameKeywords:enabled=True",
    "ReplaceReturns:enabled=True",
    "ReplaceBreakContinue:enabled=True",
    "InlineIf:enabled=True",
    "Translate:enabled=False",
    "NormalizeComments:enabled=True",
]
